--- a/f1/sheet.css
+++ b/f1/sheet.css
@@ -1,68 +1,86 @@
 *::after,
 *::before,
-*{
-    margin:0;
-    box-sizing: border-box;
+* {
+  margin: 0;
+  box-sizing: border-box;
 }
 
-h1,h2{
-    font-weight:bold;
+h1,
+h2 {
+  font-weight: 900;
 }
-aside,footer,header,main,nav{
-    margin:0.4em;
-    padding:0.6em;
+aside,
+footer,
+header,
+main,
+nav {
+  margin: 0.4em;
+  padding: 0.6em;
 }
 
 footer {
-  padding:0.4em;
+  padding: 0.4em;
 }
 
-main>blockquote{
-    font-family: 'Consolas';
-    font-size:0.8rem;
-    padding:0.4em;
+main > blockquote {
+  font-family: "Consolas";
+  font-size: 0.8rem;
+  padding: 0.4em;
+  padding-bottom: 2em;
 }
 
-aside>h1, aside>h2{
-    margin:0.2em;
+aside > h1,
+aside > h2 {
+  margin: 0.2em;
 }
-aside>ul{
-    margin:1em;
+aside > ul {
+  margin: 1em;
 }
-aside>ul>li{
-    margin:0;
+aside > ul > li {
+  margin: 0;
 }
 
 nav {
-  width:fit-content;
-  padding-right:0;
-  padding-left:0;
+  width: fit-content;
+  padding-right: 0;
+  padding-left: 0;
 }
 nav ul {
-  margin:1em;
+  margin: 1em;
 }
 nav li {
-  padding:0;
-  margin:0;
+  padding: 0;
+  margin: 0;
 }
 
-.wrapper{
-    margin:0;
-    display:flex;
-    flex-direction: row;
-    column-gap: 4em;
+.wrapper {
+  margin: 0;
+  display: flex;
+  flex-direction: row;
+  column-gap: 4em;
 }
 .left-col,
-.right-col{
-    margin:0;
-    display:flex;
-    flex-direction: column;
-    flex-basis:50%;
-
+.right-col {
+  margin: 0;
+  display: flex;
+  flex-direction: column;
+  flex-basis: 50%;
 }
 
 .azure {
-    background-color: #eeffff;
-    border: 1px solid black;
-    box-shadow: 0px 0px 8px gray;
+  background-color: #eeffff;
+  border: 1px solid black;
+  box-shadow: 0px 0px 8px gray;
+}
+
+.anim-zmiana-koloru{
+    animation-name: zmiana-koloru;
+    animation-duration: 4s;
+    animation-iteration-count: infinite;
+}
+
+@keyframes zmiana-koloru{
+    0%{background-color:red}
+    50%{background-color:blue}
+    100%{background-color:red}
 }
