fonts are relative to screen size on mobile

--- a/f1/sheet.css
+++ b/f1/sheet.css
@@ -84,3 +84,19 @@ nav li {
     50%{background-color:blue}
     100%{background-color:red}
 }
+
+@media screen and (max-width: 600px){
+    .wrapper{
+        flex-direction: column;
+        flex-basis:100%;
+    }
+    nav{
+        width:auto;
+    }
+    *{
+        font-size: 4vw;
+    }
+    h1,h2{
+        font-size: 6vw;
+    }
+}
