idc this shitty framework wtf is this

--- a/f1/ex3w3.css
+++ b/f1/ex3w3.css
@@ -1,3 +1,14 @@
 .mouse-img{
-  width:40%;
+  width:150px;
+}
+
+.bigger{
+  width:400px;
+}
+.smaller{
+  width:250px;
+}
+
+article{
+  width:fit-content;
 }
